--- a/landingPage.html
+++ b/landingPage.html
@@ -14,7 +14,7 @@
             <li><a href="#">Акции</a></li>
             <li><a href="#">Поиск</a></li>
             <li><a href="#">Регистрация на рейс</a></li>
-            <li><a href="#">Личный кабинет</a></li>
+            <li><a href="logInPage.html">Личный кабинет</a></li>
         </ul>
     </header>
     <main>
