--- a/landingPage.html
+++ b/landingPage.html
@@ -10,15 +10,16 @@
 <body>
     <header>
         <div class="logo"></div>
+        <p class="organization-name">Landing Park</p>
         <ul class="navigation">
             <li><a href="#">Акции</a></li>
             <li><a href="#">Поиск</a></li>
             <li><a href="#">Регистрация на рейс</a></li>
-            <li><a href="logInPage.html">Личный кабинет</a></li>
+            <li><a href="">Личный кабинет</a></li>
         </ul>
     </header>
-    <main>
-        <div class="form-description">
+    <div class="form-description">
+        <div class="form-content">
             <div class="search-form">
                 <h2>Форма для поиска</h2>
                 <div class="search-inputs">
@@ -54,6 +55,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <main>
         <div class="trust">
             <h2>Вы можете доверять нам</h2>
             <p>
@@ -106,17 +109,19 @@
         </div>
     </main>
     <footer>
-        <p>Номер телефона компании: 8 (800) 100-10-10
-        </p>
-            <ul class="navigation-links">
-                <li><a href="landingPage.html">Home</a></li>
-                <li><a href="">Login</a></li>
-                <li><a href="">Sign up</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">News</a></li>
-                <li><a href="javascript:history.back(-2); return false;">Return</a></li>
-                <li><a href="">Feedback</a></li>
-            </ul>
+        <di class="footer-content">
+            <p>Номер телефона компании: 8 (800) 100-10-10
+            </p>
+                <ul class="navigation-links">
+                    <li><a href="landingPage.html">Home</a></li>
+                    <li><a href="logInPage.html">Login</a></li>
+                    <li><a href="signUpPage.html">Sign up</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">News</a></li>
+                    <li><a href="javascript:history.back()">Return</a></li>
+                    <li><a href="">Feedback</a></li>
+                </ul>
+        </di>
     </footer>
     <script src="scripts/landingPage.js"></script>
 </body>
