--- a/signUpPage.html
+++ b/signUpPage.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LogIn Page</title>
+    <title>Document</title>
     <link rel="stylesheet" href="styles/landingPageStyle.css">
-    <link rel="stylesheet" href="styles/logInPageStyle.css">
 </head>
 <body>
     <div class="login-form">
@@ -34,8 +33,8 @@
                 </p>
                     <ul class="navigation-links">
                         <li><a href="landingPage.html">Home</a></li>
-                        <li><a href="logInPage.html">Login</a></li>
-                        <li><a href="signUpPage.html">Sign up</a></li>
+                        <li><a href="">Login</a></li>
+                        <li><a href="">Sign up</a></li>
                         <li><a href="">Contact</a></li>
                         <li><a href="">News</a></li>
                         <li><a href="javascript:history.back()">Return</a></li>
