--- a/landingPage.html
+++ b/landingPage.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Park</title>
-    <link rel="stylesheet" href="styles/landingPageStyle.css">
+    <link rel="stylesheet" href="styles/mainPageStyle.css">
 </head>
 <body>
     <header>
@@ -29,7 +29,7 @@
                     <input type="text" name="from-date" id="departure-date" placeholder="Дата отправления">
                     <input type="text" name="reverse-date" id="back-date" placeholder="Дата прибытия">
                     <input type="text" name="to" id="flight-to" placeholder="Куда">
-                    <input type="button" value="Поиск" id = "search-button">
+                    <input type="button" value="Поиск" id = "search-button" onclick="window.location.href='searchPage.html'">
                 </div>
             </div>
             <div class="description">
