--- a/landingPage.html
+++ b/landingPage.html
@@ -13,9 +13,9 @@
         <p class="organization-name">Landing Park</p>
         <ul class="navigation">
             <li><a href="#">Акции</a></li>
-            <li><a href="#">Поиск</a></li>
-            <li><a href="#">Регистрация на рейс</a></li>
-            <li><a href="">Личный кабинет</a></li>
+            <li><a href="searchPage.html">Поиск</a></li>
+            <li><a href="bookingPage.html">Регистрация на рейс</a></li>
+            <li><a href="privateCabinetPage.html">Личный кабинет</a></li>
         </ul>
     </header>
     <div class="form-description">
@@ -109,7 +109,7 @@
         </div>
     </main>
     <footer>
-        <di class="footer-content">
+        <div class="footer-content">
             <p>Номер телефона компании: 8 (800) 100-10-10
             </p>
                 <ul class="navigation-links">
@@ -121,7 +121,7 @@
                     <li><a href="javascript:history.back()">Return</a></li>
                     <li><a href="">Feedback</a></li>
                 </ul>
-        </di>
+        </div>
     </footer>
     <script src="scripts/landingPage.js"></script>
 </body>
