--- a/logInPage.html
+++ b/logInPage.html
@@ -37,7 +37,7 @@
         </form>
       </div>
       <footer>
-        <di class="footer-content">
+        <div class="footer-content">
           <p>Номер телефона компании: 8 (800) 100-10-10</p>
           <ul class="navigation-links">
             <li><a href="landingPage.html">Home</a></li>
@@ -48,7 +48,7 @@
             <li><a href="javascript:history.back()">Return</a></li>
             <li><a href="">Feedback</a></li>
           </ul>
-        </di>
+        </div>
       </footer>
     </div>
   </body>
