--- a/searchPage.html
+++ b/searchPage.html
@@ -67,7 +67,7 @@
       />
     </div>
     <footer>
-      <di class="footer-content">
+      <div class="footer-content">
         <p>Номер телефона компании: 8 (800) 100-10-10</p>
         <ul class="navigation-links">
           <li><a href="landingPage.html">Home</a></li>
@@ -78,7 +78,7 @@
           <li><a href="javascript:history.back()">Return</a></li>
           <li><a href="">Feedback</a></li>
         </ul>
-      </di>
+      </div>
     </footer>
   </body>
 </html>
