--- a/landingPage.html
+++ b/landingPage.html
@@ -37,22 +37,20 @@
                 <p class="principles-description">
                     При бронировании в нашей компании у Вас есть возможность сохранить при себе деньги, при условии оплаты багажа.
                 </p>
-                <div>
-                    <ul class="principles">
-                        <li>
-                            <img src="styles/images/ComfortClass_Setra_Busses.jpg" class="principle-image">
-                            <p>Есть возможность выбора даты</p>
-                        </li>
-                        <li>
-                            <img src="styles/images/2560x1600_1455055_[www.ArtFile.ru].jpg" class="principle-image">
-                            <p>Можно устанавливать количество броней</p>
-                        </li>
-                        <li>
-                            <img src="styles/images/WhatsApp_Image_2019-.jpeg" class="principle-image">
-                            <p>Есть возможность получить вероятность отправления в реальном времени</p>
-                        </li>
-                    </ul>
-                </div>
+                <ul class="principles">
+                    <li>
+                        <img src="styles/images/ComfortClass_Setra_Busses.jpg" class="principle-image">
+                        <p>Есть возможность выбора даты</p>
+                    </li>
+                    <li>
+                        <img src="styles/images/2560x1600_1455055_[www.ArtFile.ru].jpg" class="principle-image">
+                        <p>Можно устанавливать количество броней</p>
+                    </li>
+                    <li>
+                        <img src="styles/images/WhatsApp_Image_2019-.jpeg" class="principle-image">
+                        <p>Есть возможность получить вероятность отправления в реальном времени</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
@@ -104,7 +102,7 @@
             <div class="e-mail">
                 <label for="subscribe-e-mail">Ваша почта</label>
                 <input type="text" name="e-mail" id="subscribe-e-mail" title="Электронная почта" placeholder="example@mail.ru">
-                <input type="button" value="Подписаться">
+                <input type="button" value="Подписаться" class="subscribe-btn">
             </div>
         </div>
     </main>
